<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Samuel Horn
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<org.trosnoth.serveradmin.helpers.DashboardLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button android:id="@+id/buttonGameState"
        style="@style/DashboardButton"
        android:text="@string/activity_game_state"
        android:drawableTop="@drawable/home_btn_announcements_default" />
    
    <Button android:id="@+id/buttonServerSettings"
        style="@style/DashboardButton"
        android:text="@string/activity_server_settings"
        android:drawableTop="@drawable/home_btn_sessions_default" />
    
    <Button android:id="@+id/buttonPlayers"
        style="@style/DashboardButton"
        android:text="@string/activity_players"
        android:drawableTop="@drawable/home_btn_notes_default" />
    
    <Button android:id="@+id/buttonTeams"
        style="@style/DashboardButton"
        android:text="@string/activity_teams"
        android:drawableTop="@drawable/home_btn_vendors_default" />
    
    <Button android:id="@+id/buttonUpgrades"
        style="@style/DashboardButton"
        android:text="@string/activity_upgrades"
        android:drawableTop="@drawable/home_btn_starred_default" />
    
    <Button android:id="@+id/buttonMapLayout"
        style="@style/DashboardButton"
        android:text="@string/activity_map_layout"
        android:drawableTop="@drawable/home_btn_map_default" />

</org.trosnoth.serveradmin.helpers.DashboardLayout>
